# flashbricks

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py
backend/app/application/: __init__.py
backend/app/domain/entities/: __init__.py
backend/app/domain/services/: __init__.py
docs/database/: schema.sql
docs/requirements/: business-requirements.md  functional-requirements.md  non-functional-requirements.md
frontend/: App.tsx  app.json  index.web.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/config/: api.ts
frontend/src/services/: apiService.ts
ooux/: CONTENT.md  FLASHBRICK.md  HUMAN.md  PRACTICE.md  flashbrick-status-states.md
ooux/.obsidian/: workspace.json
ooux_vault/Flashbricks/: ALLOBJECTS.md  CONTENT.md  FLASHBRICK.md  HUMAN.md  LANGUAGE.md  Object Matrix.canvas  SESSION.md  Synaptic Retention Index.md  VOCABULARY RETENTION INDEX (VRI).md  flashbrick-status-states.md  memory rate.md
ooux_vault/Flashbricks/.obsidian/: workspace.json
