[project]
name = "flashbricks-backend"
version = "0.1.0"
description = "Flashbricks Backend API with FastAPI and Domain-Driven Design"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
]
